used smaller fontsize fixed footer issue covering elements on page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,9 +4,12 @@
 @import "font-awesome";
 
 body {
-  font-size: 20px;
+  font-size: 15px;
   color: #212529;
   font-family: 'Lora', 'Times New Roman', serif;
+  min-height: 400px;
+  margin-bottom: 100px;
+  clear: both;
   
 }
 
